# bitsandbytes

./: .gitattributes  .gitignore  README.md  graph_tsne_colab.ipynb  install.sh  stride_conv.py
3ddelaunay/: 3ddelaunay.py  delaunayvtk.py  harmonicmesh.py  maydelaunay.py  mayviewer.py  scidelaunay.py  scivoronoi.py  simpledelaunay.py  surfacemesh.py
Cprogs/: 1.in  1.out  1.ref  a.out  hellompi.c  hexAscii.c  intTest.c  limit.c  matrixdot.c  matrixmult.c  moo.txt  number.c  parsebible.py  primeinput.c  primetester.c  primetester.out  reverse.c
ISS/: ISSEvolver.py  ISSVis.java  ISS_simple.model  ISScma.py  StrictISS.py  description.txt  evostrat.py  testCMA.py  testParsing.py
Java/: ShowImage.java  StackReg_.java
Lisp/: mactest.el  test.lisp
NewManager/: Experiment1.properties  ExperimentGenerator.pl  jonathan.properties  readme.txt
PerlScripts/: AOVToribash.pl  backupManager.pm  calcFitness.pl  collateData.pl  compareFiles.pl  countDatFiles.pl  createCSV.pl  excelReader.pl  excelXreader.pl  fillDatFiles.pl  makeAOVArray.pl  makeAOVSimple.pl  parseCodonFitness.pl  parseFitness.pl  printPhenotypes.pl  runGeva.pl  runJava.pl  sendReport.pl  splitResults.pl  testInput.pl  testMail.pl  verifyPhenotypes.pl  verifyPhenotypes2.pl
Rscripts/: folderLines.r  folderMean.r  getFolders.r  graphFolders.r  histogram.r  parseWilcox.py  plotGRN.r  processFolder.r  regex.r  wilcox.r
ai_crawler/: ai_crawler.py
air_quality/: aqi.py  aqm.py
architype/: INSTALL.txt  analyser.py  evolver.py  geometry.py  todo.txt
ardserial/: findarduino.py  readarduino.py  writearduino.py
aruco/: create_board.py  create_markers.py  detect_board.py  detect_markers.py
astar/: advancedgui.py  bfs.py  cursegui.py  graph.py  pathfinder.py  simplegui.py
autovolve/: autovolve.py  simpleprogram.py  simplevars.py
eso/: beso.m  (+6 more)
mandelbrot/: Makefile.in  aclocal.m4  config.status  configure.ac
mandelbrot/C/: mandel.c
mandelbrot/fractalzoom/: divx2pass.log.mbtree  frames.txt  make-fractals.py  make-them-fractals.cpp  order.py  super-duper.py  template.py
mandelbrot/python/: asciimandel.py  mandel.py  mandel2.py  mandelzoom.py
mandelbrot/src/: Makefile.am  Makefile.in  mandel.c  vgalib.c  vgalib.h
sampleproject/: CMakeLists.txt  Jenkinsfile  doxygen.cfg
sampleproject/src/: sample0.cpp  sample1.cpp  sample1.h  sample2.cpp  sample2.h
sampleproject/tests/: sample0_test.cpp  sample1_test.cpp  sample2_test.cpp
(+2665 files in other folders)
